[package]
edition = "2021"
name = "AArch32_BreakpointValueMatch"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_ReservedBreakpointType]
path = "../AArch32_ReservedBreakpointType"

[dependencies.CONTEXTIDR_read]
path = "../CONTEXTIDR_read"

[dependencies.ConstrainUnpredictableBool]
path = "../ConstrainUnpredictableBool"

[dependencies.ConstrainUnpredictableInteger]
path = "../ConstrainUnpredictableInteger"

[dependencies.DBGBCR_read]
path = "../DBGBCR_read"

[dependencies.DBGBVR_read]
path = "../DBGBVR_read"

[dependencies.DBGBXVR_read]
path = "../DBGBXVR_read"

[dependencies.EL2Enabled]
path = "../EL2Enabled"

[dependencies.ELUsingAArch32]
path = "../ELUsingAArch32"

[dependencies.Have16bitVMID]
path = "../Have16bitVMID"

[dependencies.NumBreakpointsImplemented]
path = "../NumBreakpointsImplemented"

[dependencies.VTTBR_EL2_read]
path = "../VTTBR_EL2_read"

[dependencies.common]
path = "../common"

[dependencies.u__id]
path = "../u__id"

[dependencies.u_get_DBGBCR_Type_BAS]
path = "../u_get_DBGBCR_Type_BAS"

[dependencies.u_get_DBGBCR_Type_BT]
path = "../u_get_DBGBCR_Type_BT"

[dependencies.u_get_DBGBCR_Type_E]
path = "../u_get_DBGBCR_Type_E"

[dependencies.u_get_VTCR_EL2_Type_VS]
path = "../u_get_VTCR_EL2_Type_VS"

[dependencies.u_get_VTTBR_EL2_Type_VMID]
path = "../u_get_VTTBR_EL2_Type_VMID"

[dependencies.u_get_VTTBR_Type_VMID]
path = "../u_get_VTTBR_Type_VMID"
