[package]
edition = "2021"
name = "AArch32_CallHypervisor"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_TakeHVCException]
path = "../AArch32_TakeHVCException"

[dependencies.AArch64_CallHypervisor]
path = "../AArch64_CallHypervisor"

[dependencies.ELUsingAArch32]
path = "../ELUsingAArch32"

[dependencies.common]
path = "../common"
