[package]
edition = "2021"
name = "AArch32_CheckAdvSIMDOrFPRegisterTraps"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_SystemAccessTrap]
path = "../AArch32_SystemAccessTrap"

[dependencies.AArch64_AArch32SystemAccessTrap]
path = "../AArch64_AArch32SystemAccessTrap"

[dependencies.EL2Enabled]
path = "../EL2Enabled"

[dependencies.ELUsingAArch32]
path = "../ELUsingAArch32"

[dependencies.HCR_read]
path = "../HCR_read"

[dependencies.common]
path = "../common"

[dependencies.u_get_HCR_EL2_Type_TID0]
path = "../u_get_HCR_EL2_Type_TID0"

[dependencies.u_get_HCR_EL2_Type_TID3]
path = "../u_get_HCR_EL2_Type_TID3"

[dependencies.u_get_HCR_Type_TID0]
path = "../u_get_HCR_Type_TID0"

[dependencies.u_get_HCR_Type_TID3]
path = "../u_get_HCR_Type_TID3"
