[package]
edition = "2021"
name = "AArch32_CheckCP15InstrCoarseTraps"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_SystemAccessTrap]
path = "../AArch32_SystemAccessTrap"

[dependencies.AArch64_AArch32SystemAccessTrap]
path = "../AArch64_AArch32SystemAccessTrap"

[dependencies.AArch64_CheckCP15InstrCoarseTraps]
path = "../AArch64_CheckCP15InstrCoarseTraps"

[dependencies.EL2Enabled]
path = "../EL2Enabled"

[dependencies.ELUsingAArch32]
path = "../ELUsingAArch32"

[dependencies.HCR_read]
path = "../HCR_read"

[dependencies.HSTR_read]
path = "../HSTR_read"

[dependencies.common]
path = "../common"

[dependencies.u__IMPDEF_boolean]
path = "../u__IMPDEF_boolean"

[dependencies.u__id]
path = "../u__id"

[dependencies.u_get_HCR_Type_TIDCP]
path = "../u_get_HCR_Type_TIDCP"
