[package]
edition = "2021"
name = "AArch32_CheckITEnabled"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_MemSingle_read]
path = "../AArch32_MemSingle_read"

[dependencies.CreateAccDescIFetch]
path = "../CreateAccDescIFetch"

[dependencies.ELUsingAArch32]
path = "../ELUsingAArch32"

[dependencies.HSCTLR_read]
path = "../HSCTLR_read"

[dependencies.NextInstrAddr]
path = "../NextInstrAddr"

[dependencies.SCTLR_read__1]
path = "../SCTLR_read__1"

[dependencies.SCTLR_read__2]
path = "../SCTLR_read__2"

[dependencies.common]
path = "../common"

[dependencies.u_get_HSCTLR_Type_ITD]
path = "../u_get_HSCTLR_Type_ITD"

[dependencies.u_get_SCTLRType_ITD]
path = "../u_get_SCTLRType_ITD"

[dependencies.u_get_SCTLR_Type_ITD]
path = "../u_get_SCTLR_Type_ITD"
