[package]
edition = "2021"
name = "AArch32_CheckIllegalState"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_EnterHypMode]
path = "../AArch32_EnterHypMode"

[dependencies.AArch32_GeneralExceptionsToAArch64]
path = "../AArch32_GeneralExceptionsToAArch64"

[dependencies.AArch32_TakeUndefInstrException]
path = "../AArch32_TakeUndefInstrException"

[dependencies.AArch64_CheckIllegalState]
path = "../AArch64_CheckIllegalState"

[dependencies.EL2Enabled]
path = "../EL2Enabled"

[dependencies.ExceptionSyndrome]
path = "../ExceptionSyndrome"

[dependencies.HCR_read]
path = "../HCR_read"

[dependencies.ThisInstrAddr]
path = "../ThisInstrAddr"

[dependencies.common]
path = "../common"

[dependencies.u_get_HCR_Type_TGE]
path = "../u_get_HCR_Type_TGE"
