[package]
edition = "2021"
name = "AArch32_CheckVectorCatch"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_VCRMatch]
path = "../AArch32_VCRMatch"

[dependencies.ConstrainUnpredictableBool]
path = "../ConstrainUnpredictableBool"

[dependencies.ELUsingAArch32]
path = "../ELUsingAArch32"

[dependencies.S1TranslationRegime__1]
path = "../S1TranslationRegime__1"

[dependencies.common]
path = "../common"
