[package]
edition = "2021"
name = "AArch32_ClearEventCounters"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.AArch32_GetNumEventCountersAccessible]
path = "../AArch32_GetNumEventCountersAccessible"

[dependencies.AArch64_ClearEventCounters]
path = "../AArch64_ClearEventCounters"

[dependencies.HaveAArch64]
path = "../HaveAArch64"

[dependencies.PMEVCNTR_set]
path = "../PMEVCNTR_set"

[dependencies.Zeros]
path = "../Zeros"

[dependencies.common]
path = "../common"

[dependencies.neq_int]
path = "../neq_int"

[dependencies.u__id]
path = "../u__id"
