[package]
edition = "2021"
name = "AArch32_DefaultTEXDecode"
version = "0.0.0"

[dependencies]
log = "0.4.21"

[dependencies.ConstrainUnpredictableBits]
path = "../ConstrainUnpredictableBits"

[dependencies.DecodeSDFAttr]
path = "../DecodeSDFAttr"

[dependencies.Unreachable]
path = "../Unreachable"

[dependencies.common]
path = "../common"

[dependencies.u__IMPDEF_MemoryAttributes]
path = "../u__IMPDEF_MemoryAttributes"
